@@ -344,7 +344,7 @@
 ** Werte: beliebige Zeichenkette (Standardwert: `""`)
 
 * *weechat.look.hline_char*
-** Beschreibung: `Das angegebene Zeichen wird genutzt um damit die horizontalen Linien zu zeichnen. Hinweis: Ein leerer Wert bewirkt das ncurses eine durchgezogene Linie zeichnet. Dies kann aber bei einigen Terminals, in URL Sektionen, zu Fehlern führen.`
+** Beschreibung: `char used to draw horizontal separators around bars (empty value will draw a real line with ncurses, but may cause bugs with URL selection under some terminals), wide chars are NOT allowed here`
 ** Typ: Zeichenkette
 ** Werte: beliebige Zeichenkette (Standardwert: `"-"`)
 
@@ -501,12 +501,17 @@
 * *weechat.look.read_marker*
 ** Beschreibung: `Nutzt eine Linie oder ein Zeichen um die erste ungelesene Nachricht in einem Buffer zu markieren`
 ** Typ: integer
-** Werte: none, line, dotted-line, char (Standardwert: `dotted-line`)
+** Werte: none, line, char (Standardwert: `line`)
 
 * *weechat.look.read_marker_always_show*
 ** Beschreibung: `Das Lesezeichen wird immer dargestellt auch wenn noch keine neue Nachricht im Buffer geschrieben wurde`
 ** Typ: boolesch
 ** Werte: on, off (Standardwert: `off`)
+
+* *weechat.look.read_marker_string*
+** Beschreibung: `string used to draw read marker line (string is repeated until end of line)`
+** Typ: Zeichenkette
+** Werte: beliebige Zeichenkette (Standardwert: `"- "`)
 
 * *weechat.look.save_config_on_exit*
 ** Beschreibung: `Konfiguration beim Beenden abspeichern`
