@@ -344,7 +344,7 @@
 ** valori: qualsiasi stringa (valore predefinito: `""`)
 
 * *weechat.look.hline_char*
-** descrizione: `carattere utilizzato per disegnare le righe orizzontali; notare che un valore vuoto disegnerà una vera riga con ncurses, ma può causare errori con la selezione dell'URL in alcuni terminali`
+** descrizione: `char used to draw horizontal separators around bars (empty value will draw a real line with ncurses, but may cause bugs with URL selection under some terminals), wide chars are NOT allowed here`
 ** tipo: stringa
 ** valori: qualsiasi stringa (valore predefinito: `"-"`)
 
@@ -501,12 +501,17 @@
 * *weechat.look.read_marker*
 ** descrizione: `usa un evidenziatore (riga o carattere) sui buffer per mostrare la prima riga non letta`
 ** tipo: intero
-** valori: none, line, dotted-line, char (valore predefinito: `dotted-line`)
+** valori: none, line, char (valore predefinito: `line`)
 
 * *weechat.look.read_marker_always_show*
 ** descrizione: `mostra sempre l'evidenziatore di lettura, anche se si trova dopo l'ultima riga del buffer`
 ** tipo: bool
 ** valori: on, off (valore predefinito: `off`)
+
+* *weechat.look.read_marker_string*
+** descrizione: `string used to draw read marker line (string is repeated until end of line)`
+** tipo: stringa
+** valori: qualsiasi stringa (valore predefinito: `"- "`)
 
 * *weechat.look.save_config_on_exit*
 ** descrizione: `salva file di configurazione all'uscita`
