@@ -114,6 +114,7 @@ struct t_config_option *config_look_prefix_buffer_align_more;
 struct t_config_option *config_look_prefix_suffix;
 struct t_config_option *config_look_read_marker;
 struct t_config_option *config_look_read_marker_always_show;
+struct t_config_option *config_look_read_marker_string;
 struct t_config_option *config_look_save_config_on_exit;
 struct t_config_option *config_look_save_layout_on_exit;
 struct t_config_option *config_look_scroll_amount;
@@ -1514,9 +1515,9 @@ config_weechat_init_options ()
     config_look_hline_char = config_file_new_option (
         weechat_config_file, ptr_section,
         "hline_char", "string",
-        N_("char used to draw horizontal lines, note that empty value will "
-           "draw a real line with ncurses, but may cause bugs with URL "
-           "selection under some terminals"),
+        N_("char used to draw horizontal separators around bars (empty value "
+           "will draw a real line with ncurses, but may cause bugs with URL "
+           "selection under some terminals), wide chars are NOT allowed here"),
         NULL, 0, 0, "-", NULL, 0, NULL, NULL, &config_change_buffers, NULL, NULL, NULL);
     config_look_hotlist_names_count = config_file_new_option (
         weechat_config_file, ptr_section,
@@ -1694,13 +1695,19 @@ config_weechat_init_options ()
         weechat_config_file, ptr_section,
         "read_marker", "integer",
         N_("use a marker (line or char) on buffers to show first unread line"),
-        "none|line|dotted-line|char",
-        0, 0, "dotted-line", NULL, 0, NULL, NULL, &config_change_read_marker, NULL, NULL, NULL);
+        "none|line|char",
+        0, 0, "line", NULL, 0, NULL, NULL, &config_change_read_marker, NULL, NULL, NULL);
     config_look_read_marker_always_show = config_file_new_option (
         weechat_config_file, ptr_section,
         "read_marker_always_show", "boolean",
         N_("always show read marker, even if it is after last buffer line"),
         NULL, 0, 0, "off", NULL, 0, NULL, NULL, NULL, NULL, NULL, NULL);
+    config_look_read_marker_string = config_file_new_option (
+        weechat_config_file, ptr_section,
+        "read_marker_string", "string",
+        N_("string used to draw read marker line (string is repeated until "
+           "end of line)"),
+        NULL, 0, 0, "- ", NULL, 0, NULL, NULL, &config_change_read_marker, NULL, NULL, NULL);
     config_look_save_config_on_exit = config_file_new_option (
         weechat_config_file, ptr_section,
         "save_config_on_exit", "boolean",
