@@ -552,7 +552,7 @@ gui_bar_window_draw (struct t_gui_bar_window *bar_window,
     int chars_available, index, size;
     int length_screen_before_cursor, length_screen_after_cursor;
     int diff, max_length, optimal_number_of_lines;
-    int some_data_not_displayed;
+    int some_data_not_displayed, hline_char;
     
     if (!gui_init_ok)
         return;
@@ -834,21 +834,28 @@ gui_bar_window_draw (struct t_gui_bar_window *bar_window,
     
     if (CONFIG_INTEGER(bar_window->bar->options[GUI_BAR_OPTION_SEPARATOR]))
     {
+        if (CONFIG_STRING(config_look_hline_char)
+            && CONFIG_STRING(config_look_hline_char)[0])
+        {
+            hline_char = utf8_char_int (CONFIG_STRING(config_look_hline_char));
+            if (hline_char > 127)
+                hline_char = ACS_HLINE;
+        }
+        else
+            hline_char = ACS_HLINE;
         switch (CONFIG_INTEGER(bar_window->bar->options[GUI_BAR_OPTION_POSITION]))
         {
             case GUI_BAR_POSITION_BOTTOM:
                 gui_window_set_weechat_color (GUI_BAR_WINDOW_OBJECTS(bar_window)->win_separator,
                                               GUI_COLOR_SEPARATOR);
                 mvwhline (GUI_BAR_WINDOW_OBJECTS(bar_window)->win_separator,
-                          0, 0, gui_window_get_hline_char (),
-                          bar_window->width);
+                          0, 0, hline_char, bar_window->width);
                 break;
             case GUI_BAR_POSITION_TOP:
                 gui_window_set_weechat_color (GUI_BAR_WINDOW_OBJECTS(bar_window)->win_separator,
                                               GUI_COLOR_SEPARATOR);
                 mvwhline (GUI_BAR_WINDOW_OBJECTS(bar_window)->win_separator,
-                          0, 0, gui_window_get_hline_char (),
-                          bar_window->width);
+                          0, 0, hline_char, bar_window->width);
                 break;
             case GUI_BAR_POSITION_LEFT:
                 gui_window_set_weechat_color (GUI_BAR_WINDOW_OBJECTS(bar_window)->win_separator,
